tests/macro-tests/cases/widget_new/missing_semi_in_when2.stderr
error: expected `,`
  --> cases/widget_new/missing_semi_in_when2.rs:16:22
   |
16 |             margin = cursor = CursorIcon::Pointer;
   |                      ^^^^^^

error[E0061]: this method takes 1 argument but 0 arguments were supplied
  --> cases/widget_new/missing_semi_in_when2.rs:16:13
   |
12 |       let _ = Wgt! {
   |  _____________-
13 | |         margin = 0;
14 | |         cursor = CursorIcon::Default;
15 | |         when *#is_pressed {
16 | |             margin = cursor = CursorIcon::Pointer;
   | |             ^^^^^^
17 | |         }
18 | |     };
   | |_____- argument #1 is missing
   |
note: method defined here
  --> $WORKSPACE/crates/zng-wgt/src/layout_props.rs
   |
   | pub fn margin(child: impl IntoUiNode, margin: impl IntoVar<SideOffsets>) -> UiNode {
   |        ^^^^^^
help: provide the argument
  --> $WORKSPACE/crates/zng-wgt/src/wgt.rs
   |
   - #[widget($crate::Wgt)]
   + (/* margin */)
   |
